# viper

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  NOTICE.txt  README.md
cmakes/: yaml.cmake
docs/: options.md
example/: CMakeLists.txt  main.cpp
include/: viper.h  viper_option.h
include/option/: args.h  command.h  flag.h  value.h
include/text/: formater.h  strings.h
src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/libs/formater/: formater.cpp  formater.h
src/libs/strings/: strings.cpp  strings.h
src/option/: args.cpp  command.cpp  help_cmd.cpp  help_cmd.h  value.cpp
src/text/: formater.cpp  strings.cpp
viper-tool/: CMakeLists.txt  main.cpp
